k8s/bankapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-svc
  namespace: bankapp  
spec:
  selector:
    app: bankapp
  ports:
  - port: 8080
    targetPort: 8080
