k8s/bankapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  labels:
    name: bankapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: bankapp.rishindra.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bankapp-svc
            port: 
              number: 8080
